--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MailChimp</title>
     <link rel="stylesheet" href="style/css/style.css">
+
 </head>
 <body>
     <!--HEADER-->
@@ -100,10 +101,10 @@
         </div> 
    </section>
    <!--PRICES-->
-   <section class="prices">
+   <section class="prices" >
         <div class="prices__container container">
             <h2 class="prices__title">Find the right plan</h2>
-            <div class="prices__table">
+            <div class="prices__table" data-aos="fade-down"  data-aos-easing="linear" data-aos-duration="1000">
                 <div class="prices__recommended-plan">
                     <div class="prices__recommended-plan-container">
                         <p class="prices__recommended-text">Mailchimp Recommends</p>
@@ -231,7 +232,7 @@
         </div>
    </section>
    <!--ABOUT US-->
-   <section class="about-us">
+   <section class="about-us" >
         <div class="about-us__container container">
             <h2 class="about-us__title">
                 Generate up to 4x more orders* 
@@ -239,7 +240,7 @@
             </h2>
             <div class="about-us__row row-column-2">
                 <div class="about-us__column">
-                    <div class="about-us__schema">
+                    <div class="about-us__schema" >
                         <div class="about-us__schema-heading row-column-2">
                             <p class="about-us__schema-heading-title">
                                 Feedback request
@@ -248,7 +249,7 @@
                                 Email tagged contact
                             </p>
                         </div>
-                        <div class="about-us__schema-diagram row-column-3">
+                        <div class="about-us__schema-diagram row-column-3" data-aos="fade-right" data-aos-easing="linear" data-aos-duration="1000">
                             <div class="about-us__schema-column"></div>
                             <div class="about-us__schema-column">
                                 <div class="about-us__schema-step about-us__schema-step-container">
@@ -277,7 +278,7 @@
                     </div>
                 </div>
                 <div class="about-us__column">
-                    <div class="about-us__column-container">
+                    <div class="about-us__column-container" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000">
                         <p class="about-us__description-title about-us__first-row-title">Convert more customers at scale</p>
                         <p class="about-us__description-text">
                             Drive more traffic and sales by setting up 
@@ -297,7 +298,7 @@
                                 Custom Journey
                             </p>
                         </div>
-                        <div class="row-column-3 about-us__schema-diagram">
+                        <div class="row-column-3 about-us__schema-diagram" data-aos="fade-right" data-aos-easing="linear" data-aos-duration="1000">
                             <div class="about-us__schema-column">
                                 <div class="about-us__schema-step about-us__schema-step-container">
                                     <img src="assets/about-us/play.svg" alt="icon" class="about-us__schema-icon">
@@ -332,7 +333,7 @@
                     </div>
                 </div>
                 <div class="about-us__column">
-                    <div class="about-us__column-container">
+                    <div class="about-us__column-container" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000">
                         <p class="about-us__description-title">Discover new ways to automate</p>
                         <p class="about-us__description-text">
                             Get a head start with pre-built journeys 
@@ -342,7 +343,7 @@
                         </p>
                         <a href="#" class="about-us__description-link link">Learn more</a>
                     </div>
-                    <div class="about-us__column-container">
+                    <div class="about-us__column-container" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000">
                         <p class="about-us__description-title about-us__last-description-title">Keep your emails relevant and your brand growing</p>
                         <p class="about-us__description-text">
                             Deliver personalized emails based on 
@@ -361,14 +362,14 @@
             <div class="additional-info__column additional-info__col-1">
                 <h2 class="additional-info__title">Keep customers ready to buy with engaging contant</h2>
 
-                <div class="additional-info__column-block">
+                <div class="additional-info__column-block" data-aos="fade-right" data-aos-easing="linear" data-aos-duration="1000">
                     <p class="additional-info__item-title">Content Optimizer</p>
                     <div class="additional-info__item">
                         <p class="additional-info__item-description">Learn how your emails compare to the top-performing campaigns in your industry and get data-driven suggestions for improving your copy, imagery, and layout.</p>
                         <a href="#" class="additional-info__item-link link">Learn more</a>
                     </div>
                 </div>
-                <div class="additional-info__column-block">
+                <div class="additional-info__column-block" data-aos="fade-right" data-aos-easing="linear" data-aos-duration="1000">
                     <p class="additional-info__item-title">Content Optimizer</p>
                     <div class="additional-info__item">
                         <p class="additional-info__item-description">Learn how your emails compare to the top-performing campaigns in your industry and get data-driven suggestions for improving your copy, imagery, and layout.</p>
@@ -386,21 +387,21 @@
             <div class="integrations__row row-column-3">
                 <div class="integrations__column">
                     <div class="integrations__block">
-                        <img src="./assets/integrations/canva.png" alt="canva" class="integrations__block-img">
+                        <img src="./assets/integrations/IMAGEcanva.svg" alt="canva" class="integrations__block-img">
                         <div class="integrations__block-description">
                             <p class="integrations__block-title">Canva</p>
                             <p class="integrations__block-text">Create compelling visuals for your marketing.</p>
                         </div>
                     </div>
                     <div class="integrations__block">
-                        <img src="./assets/integrations/shopify.png" alt="shopify" class="integrations__block-img">
+                        <img src="./assets/integrations/IMAGEshopify.svg" alt="shopify" class="integrations__block-img">
                         <div class="integrations__block-description">
                             <p class="integrations__block-title">Shopify</p>
                             <p class="integrations__block-text">Sync Shopify customers, products, and purchase data to Mailchimp.</p>
                         </div>
                     </div>
                     <div class="integrations__block">
-                        <img src="./assets/integrations/qb.png" alt="qb" class="integrations__block-img">
+                        <img src="./assets/integrations/IMAGEquickBooks.svg" alt="qb" class="integrations__block-img">
                         <div class="integrations__block-description">
                             <p class="integrations__block-title">QuickBooks Online</p>
                             <p class="integrations__block-text">Bring together your marketing tools and invoice data.</p>
@@ -409,21 +410,21 @@
                 </div>
                 <div class="integrations__column">
                     <div class="integrations__block">
-                        <img src="./assets/integrations/salesforce.png" alt="salesforce" class="integrations__block-img">
+                        <img src="./assets/integrations/IMAGEsalesforce.svg" alt="salesforce" class="integrations__block-img">
                         <div class="integrations__block-description">
                             <p class="integrations__block-title">Mailchimp for Salesforce</p>
                             <p class="integrations__block-text">Sync your Mailchimp subscribers and Salesforce® leads across platforms.</p>
                         </div>
                     </div>
                     <div class="integrations__block">
-                        <img src="./assets/integrations/google.png" alt="canva" class="integrations__block-img">
+                        <img src="./assets/integrations/IMAGEgoogle.svg" alt="google" class="integrations__block-img">
                         <div class="integrations__block-description">
                             <p class="integrations__block-title">Google Analytics</p>
                             <p class="integrations__block-text">Unlock powerful insights with campaign, website, or landing page data.</p>
                         </div>
                     </div>
                     <div class="integrations__block">
-                        <img src="./assets/integrations/squarespace.png" alt="squarespace" class="integrations__block-img">
+                        <img src="./assets/integrations/IMAGESquarespace.svg" alt="squarespace" class="integrations__block-img">
                         <div class="integrations__block-description">
                             <p class="integrations__block-title">Squarespace Commerce</p>
                             <p class="integrations__block-text">Market your ecommerce business and drive sales.</p>
@@ -432,21 +433,21 @@
                 </div>
                 <div class="integrations__column">
                     <div class="integrations__block">
-                        <img src="./assets/integrations/inst.png" alt="Instagram" class="integrations__block-img">
+                        <img src="./assets/integrations/IMAGEinstagram.svg" alt="Instagram" class="integrations__block-img">
                         <div class="integrations__block-description">
                             <p class="integrations__block-title">Instagram</p>
                             <p class="integrations__block-text">Promote and share your Instagram posts in email campaigns.</p>
                         </div>
                     </div>
                     <div class="integrations__block">
-                        <img src="./assets/integrations/woo.png" alt="WooCommerce" class="integrations__block-img">
+                        <img src="./assets/integrations/IMAGEwoo.svg" alt="WooCommerce" class="integrations__block-img">
                         <div class="integrations__block-description">
                             <p class="integrations__block-title">WooCommerce</p>
                             <p class="integrations__block-text">Power your ecommerce store with smart marketing features.</p>
                         </div>
                     </div>
                     <div class="integrations__block">
-                        <img src="./assets/integrations/zapier.png" alt="canva" class="integrations__block-img">
+                        <img src="./assets/integrations/IMAGEzapier.svg" alt="canva" class="integrations__block-img">
                         <div class="integrations__block-description">
                             <p class="integrations__block-title">Zapier</p>
                             <p class="integrations__block-text">Automatically pass data between web services without a single line of code.</p>
@@ -589,6 +590,11 @@
             </div>
         </div>
     </footer>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
     <script src="scripts/script.js"></script>
 </body>
 </html>
