--- a/index.html
+++ b/index.html
@@ -591,10 +591,9 @@
         </div>
     </footer>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
-    <script src="scripts/script.js"></script>
+    <script src="scripts/script-dist.js"></script>
 </body>
 </html>
