--- a/index.html
+++ b/index.html
@@ -54,43 +54,47 @@
                 <div class="banner-benefits__row-1 row-column-4">
                     <div class="banner-benefits__column" id="banner-benefits-1">
                         <div class="banner-benefits__img-container">
-                            <img src="assets/banner/benefit-1.svg" alt="benefit img" class="banner-benefits__img img">
+                            <img src="assets/banner/benefit-1.svg" alt="benefit img" class="banner-benefits__img img lazyload" loading="lazy">
+                            <h2 class="banner-benefits__title">Convert with Automations</h2>
                         </div>
                         <div class="banner-benefits__content">
-                            <p class="banner-benefits__title">Send the right message at the right time to convert more customers.</p>
+                            <p class="banner-benefits__text">Send the right message at the right time to convert more customers.</p>
                             <a href="#" class="banner-benefits__link button link">Learn more</a>
                         </div>
                     </div>
                     <div class="banner-benefits__column" id="banner-benefits-2">
                         <div class="banner-benefits__img-container">
-                            <img src="assets/banner/benefit-2.svg" alt="benefit img" class="banner-benefits__img img">
+                            <img src="assets/banner/benefit-2.svg" alt="benefit img" class="banner-benefits__img img lazyload" loading="lazy">
+                            <h2 class="banner-benefits__title">Optimize with AI & Analytics</h2>
                         </div>
                         <div class="banner-benefits__content">
-                            <p class="banner-benefits__title">Get AI-assisted suggestions to help make your content more engaging.</p>
+                            <p class="banner-benefits__text">Get AI-assisted suggestions to help make your content more engaging.</p>
                             <a href="#" class="banner-benefits__link button link">Learn more</a>
                         </div>
                     </div>
                     <div class="banner-benefits__column" id="banner-benefits-3">
                         <div class="banner-benefits__img-container">
-                            <img src="assets/banner/benefit-3.svg" alt="benefit img" class="banner-benefits__img img">
+                            <img src="assets/banner/benefit-3.svg" alt="benefit img" class="banner-benefits__img img lazyload" loading="lazy">
+                            <h2 class="banner-benefits__title">Target with Segmentation</h2>
                         </div>
                         <div class="banner-benefits__content">
-                            <p class="banner-benefits__title">Boost customer loyalty by predicting the right ones to target.</p>
+                            <p class="banner-benefits__text">Boost customer loyalty by predicting the right ones to target.</p>
                             <a href="#" class="banner-benefits__link button link">Learn more</a>
                         </div>
                     </div>
                     <div class="banner-benefits__column" id="banner-benefits-4">
                         <div class="banner-benefits__img-container">
-                            <img src="assets/banner/benefit-4.svg" alt="benefit img" class="banner-benefits__img img">
+                            <img src="assets/banner/benefit-4.svg" alt="benefit img" class="banner-benefits__img img lazyloadd" loading="lazy">
+                            <h2 class="banner-benefits__title">Sync with Integrations</h2>
                         </div>
                         <div class="banner-benefits__content">
-                            <p class="banner-benefits__title">Connect more tools, get more data, save time, and make better decisions.</p>
+                            <p class="banner-benefits__text">Connect more tools, get more data, save time, and make better decisions.</p>
                             <a href="#" class="banner-benefits__link button link">Learn more</a>
                         </div>
                     </div>
                 </div>
                 <div class="banner-benefits__row-2">
-                    <p class="banner-benefits__text">
+                    <p class="banner-benefits__row-2-text">
                         Most email marketing platforms tell you how your campaigns perform. 
                         We analyze the data from the billions of emails we send to give you 
                         personalized recommendations for improving your content, targeting, 
@@ -377,7 +381,7 @@
                     </div>
                 </div>
             </div>
-            <div class="additional-info__column additional-info__col-2"></div>
+            <div class="additional-info__column additional-info__col-2" loading="lazy"></div>
         </div>
     </section>
     <!--INTEGRATIONS-->
@@ -594,6 +598,7 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
+    <script src="scripts/lazyload.js"></script>
     <script src="scripts/script-dist.js"></script>
 </body>
 </html>
