--- a/index.html
+++ b/index.html
@@ -381,7 +381,8 @@
                     </div>
                 </div>
             </div>
-            <div class="additional-info__column additional-info__col-2" loading="lazy"></div>
+            <div class="additional-info__column additional-info__col-2">
+            </div>
         </div>
     </section>
     <!--INTEGRATIONS-->
