Fix some issues

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="popup" id="signup-popup">
         <div class="popup__content">
             <button class="popup__close button" id="close-popup">&times;</button>
-            <h2 class="popup__title">Sign Up</h2>
+            <h2 class="popup__title">Sign Up/Log In</h2>
             <form class="popup__form">
                 <label for="email" class="popup__label">Email:</label>
                 <input type="email" id="email" class="popup__input" required>
@@ -42,7 +42,7 @@
                         <img src="assets/header/language.svg" alt="language-switcher" class="language-switcher__icon">
                     </button>
                     <button class="search-controls button button-transperent">Search</button>
-                    <button class="user-access-buttons button button-transperent">Log In</button>
+                    <button class="user-access-buttons button button-transperent sign-up-button">Log In</button>
                     <button class="user-access-buttons button sign-up-button" id="sign-up-button">Sign Up</button>
                 </div>
             </div>
@@ -59,7 +59,7 @@
                     <p class="banner__text">
                         Win new customers with the #1 email marketing and automations brand* that recommends ways to get more opens, clicks, and sales.
                     </p>
-                    <button class="banner__button user-access-buttons button">Sign Up</button>
+                    <button class="banner__button user-access-buttons button sign-up-button">Sign Up</button>
                 </div>
             </div>
             <!--BANNER BENEFITS-->
